--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,9 @@
 <app-navbar></app-navbar>
+
+<section class="hero">
+    <img src="../../../assets/hero-background.png" alt="hand-background" class="hero-img">
+    <div class="hero-content">
+        <h1 class="hero-title text-light">Tu puerta al futuro legal</h1>
+        <h2 class="hero-subtitle text-light">Encuentra información legal, contactos y oportunidades</h2>        
+    </div>
+</section>
