--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -7,3 +7,43 @@
         <h2 class="hero-subtitle text-light">Encuentra información legal, contactos y oportunidades</h2>        
     </div>
 </section>
+
+<section class="cards">
+    <div class="container">
+    <div class="row row-cols-1 row-cols-md-2 g-2 container">
+        <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                <div class="col-md-4 card-img-container">
+                    <img src="../../../assets/Group.svg" class="img-fluid rounded-start card-img" alt="balanza">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                    <h5 class="card-title">Perfiles profesionales</h5>
+                    <p class="card-text">Encuentra a los mejores profesionales del derecho que te brindarán asesoramiento.</p>
+                    <button class="btn btn-outline-dark">Más información</button>
+                    </div>
+                </div>
+                </div>
+            </div>  
+        </div>
+
+        <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4 card-img-container">
+                    <img src="../../../assets/book-alt-bg-light.svg" class="img-fluid rounded-start card-img" alt="balanza">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Revista Jurídica</h5>
+                      <p class="card-text">Infórmate y comparte conocimiento legal con la sociedad.</p>
+                      <button class="btn btn-outline-dark">Más información</button>
+                    </div>
+                  </div>
+                </div>
+            </div>  
+        </div>
+    </div>
+    </div>
+</section>
