--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -36,12 +36,29 @@
 
 /*Profiles*/
 .items{
-    margin: 1%;
-    padding: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-top: 2%;
 }
 
 .pill{
     background-color: #24245B !important;
-    padding-top: 10%;
-    padding-bottom: 10%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 50%;
+    padding-right: 50px;
+}
+
+.img-cont{
+    height: 200px;
+}
+
+.card-img{
+    width: 100%;
+    height: 100%;
+}
+
+.mprof-btn{
+    display: flex;
+    justify-content: center;
 }
