fixed some style details; added footer

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -85,7 +85,7 @@
                                             <div class="col-md-3 mb-3" *ngFor="let profile of item">
                                                 <div class="card carousel-card">
                                                     <div class="img-cont">
-                                                        <img class="img-fluid card-img" alt="100%x280" src="{{ profile.imageUrl }}">
+                                                        <img class="img-fluid car-card-img" alt="100%x280" src="{{ profile.imageUrl }}">
                                                     </div>
                                                     <div class="card-body">
                                                         <h4 class="card-title">{{ profile.name }}</h4>
@@ -103,7 +103,7 @@
                                         <div class="col-md-3 mb-3" *ngFor="let profile of item">
                                             <div class="card carousel-card">
                                                 <div class="img-cont">
-                                                    <img class="img-fluid card-img" alt="100%x280" src="{{ profile.imageUrl }}">
+                                                    <img class="img-fluid car-card-img" alt="100%x280" src="{{ profile.imageUrl }}">
                                                 </div>
                                                 <div class="card-body">
                                                     <h4 class="card-title">{{ profile.name }}</h4>
@@ -125,5 +125,25 @@
     </div>
     <div class="mprof-btn">
         <button class="btn btn-outline-dark">Ver más perfiles</button>
+    </div>
+</section>
+
+<section class="status-card">
+    <div class="">
+        <div class="row">
+          <div class="col">
+            <img src="../../../assets/status-card.svg" alt="">
+          </div>
+          <div class="col sc-desc">
+            <h2>¿Qué es la Status Card?</h2>
+            <p>
+                Es una tarjeta que lleva a tu perfil profesional y te conecta con un mundo de ventajas:                
+            </p>
+            <ul>
+                <li>Encuentra clientes, pasantías y oportunidades laborales desde tu perfil.</li>
+                <li>Publica artículos en la Revista Jurídica y recibe tu boletín legal.</li>
+            </ul>
+          </div>
+        </div>
     </div>
 </section>
