--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -53,7 +53,7 @@
     height: 200px;
 }
 
-.card-img{
+.car-card-img{
     width: 100%;
     height: 100%;
 }
@@ -61,4 +61,13 @@
 .mprof-btn{
     display: flex;
     justify-content: center;
+}
+
+/*status card*/
+.status-card{
+    margin-top: 4%;
+    background-color: #C0C0C0;
+    padding-top: 3%;
+    padding-left: 1%;
+    padding-right: 1%;
 }
